<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.charleshested.cfcontroller.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rssi_and_distance"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/EnterRssiEval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/rssi_evaluation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EnterRssiCollect" />

        <Button
            android:id="@+id/EnterRssiCollect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/rssi_analysis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button_equation_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/set_function_coefficients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EnterRssiEval" />

        <Button
            android:id="@+id/EnterLocationExperiment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/location_experiment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/map_and_analysis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EnterLocationExperiment" />

        <View
            android:id="@+id/view22"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dl_ac_data" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/location_of_the_bicycle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view22" />

        <Button
            android:id="@+id/btn_dl_ac_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/download_accuracy_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dl_rssi_data" />

        <Button
            android:id="@+id/btn_dl_rssi_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/download_rssi_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_equation_values" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quad_margin"
            android:layout_marginStart="@dimen/quad_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="Test Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_map" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>




