<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context="com.charleshested.cfcontroller.RssiEvaluationActivity">

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="@dimen/description_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/label_distance"
        app:layout_constraintBottom_toBottomOf="@+id/input_dist"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_dist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distance_label"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/quad_margin"
        android:layout_marginStart="@dimen/quad_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/startbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_dist" />

    <View
        android:id="@+id/view22"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <TextView
        android:id="@+id/aDistLabel"
        android:layout_width="@dimen/description_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/label_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view22" />

    <TextView
        android:id="@+id/medianLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/mean_label"
        app:layout_constraintBottom_toBottomOf="@+id/s6_header"
        app:layout_constraintStart_toEndOf="@+id/s6_header" />

    <TextView
        android:id="@+id/distTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/aDistLabel"
        app:layout_constraintStart_toEndOf="@+id/aDistLabel"
        tools:text="12" />

    <TextView
        android:id="@+id/stdevLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:text="@string/label_stdev"
        app:layout_constraintStart_toStartOf="@+id/medianLabel"
        app:layout_constraintTop_toBottomOf="@+id/medianLabel" />

    <TextView
        android:id="@+id/s6_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/medianLabel"
        app:layout_constraintStart_toEndOf="@+id/medianLabel"
        tools:text="13.5" />

    <TextView
        android:id="@+id/s6_stdev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/stdevLabel"
        app:layout_constraintStart_toEndOf="@+id/stdevLabel"
        tools:text="1.2" />

    <TextView
        android:id="@+id/s6_header"
        android:layout_width="@dimen/description_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:text="@string/samsung_6"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aDistLabel"
        tools:text="Samsung 6:" />

    <TextView
        android:id="@+id/s8_header"
        android:layout_width="@dimen/description_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:text="@string/samsung_8"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stdevLabel"
        tools:text="Samsung 8:" />

    <TextView
        android:id="@+id/s8_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        tools:text="12.4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/mean_label"
        app:layout_constraintBottom_toBottomOf="@+id/s8_header"
        app:layout_constraintStart_toEndOf="@+id/s8_header" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:text="@string/label_stdev"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/s8_stdev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/na"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        tools:text="2.6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rssi_evaluation"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
